Mobile menu overlay z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -99,11 +99,6 @@ ul {
     justify-content: space-between;
 }
 
-.main-nav {
-    position: relative;
-    z-index: 1;
-}
-
 .nav-control {
     position: relative;
     display: none;
@@ -115,6 +110,12 @@ ul {
     font-size: 2em;
 }
 
+.navigation__logo,
+.nav-control {
+    position: relative;
+    z-index: 300;
+}
+
 .menu-overlay {
     opacity: 0;
     position: absolute;
@@ -123,7 +124,7 @@ ul {
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.341);
-    z-index: -200;
+    z-index: 100;
     transition: 0.5s ease-in-out;
 }
 
@@ -862,7 +863,7 @@ footer .social-links img {
         padding: 80px 8px;
         left: -100%;
         transition: 0.5s ease-in-out;
-        z-index: -5;
+        z-index: 200;
     }
 
     .navigation__links.active {
